Updated double jump
multiple jumps will now auto select first move for the first option

--- a/Checkers.ipynb
+++ b/Checkers.ipynb
@@ -2,33 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "7707cfdb-9b71-46a6-a837-396aab4e15e8",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2 3 False\n",
-      "133030441445a0 1 True\n",
-      "40040002 5 False\n",
-      "1100100011001100110011000100010010106a00011116a6a0011116a6a00111106a00115a010115a5a11115a5a1100105a01100105a011115a5a11115a5a110105a1111007a01111007a7a1111007a7a01010007a001000100011001100110011001100013 4 True\n",
-      "1100100011001100110011000100010010106a00011116a6a0011116a6a00111106a00111010115a5a11115a11100105a01141111100105a0111115a7a110105a1110010111007a5a1111007a101010007a0010007a00011001100110017a001100013 2 False\n",
-      "1100100011001100110011000100010010106a00011116a6a0011116a6a00111106a00111010115a5a11115a11100105a01141111100105a0111115a7a110105a1110010111007a5a1111007a101010007a0010007a00011001100110017a001100012 3 True\n",
-      "11006a00011001100110016a0001000100101010001115a6a001116a100111106a001111010115a11100105a01131111114111111001010111115a1110105a1110010111007a5a1111007a101010007a0010007a00011001100110017a001100014 5 False\n",
-      "11006a00011001100110016a0001000100101010001115a6a001116a100111106a001111010115a11100105a01131111114111111001010111115a1110105a1110010111007a5a1111007a101010007a0010007a00011001100110017a001100015 4 True\n",
-      "11006a00011001100110016a0001000100101010001115a6a001116a100111106a001111010115a11100101011311114411111141115a10010101110107a1110010110015a111007a1010100010010007a00011007a100110017a00110007a2 3 False\n",
-      "11006a00011001100110016a0001000100101010001115a6a001116a100111106a001111010115a11100101011311114411111141115a10010101110107a1110010110015a111007a1010100010010007a00011007a100110017a00110007a4 5 True\n",
-      "11006a00011001100110016a000100010010106a0001115a6a001116a5a00111106a00115a010115a5a110010101111115a100105a0111311331110107a111005a01110015a1111007a010100010010007a00011001100110017a001100015 6 False\n",
-      "11006a00011001100110016a000100010010106a0001115a6a001116a5a00111106a00115a010115a5a110010101111115a100105a0111311331110107a111005a01110015a1111007a010100010010007a00011001100110017a001100013 4 True\n",
-      "11006a00011001100110016a000100010010106a0001115a6a001116a5a00111106a00111010115a1110010101444111141115a100105a01410107a1110010110015a010100010010007a00011007a10010017a0010005a7 0 False\n",
-      "11006a00011001100110016a000100010010106a0001115a6a001116a5a00111106a00111010115a1110010101444111141115a100105a01410107a1110010110015a010100010010007a00011007a10010017a0010005a"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import tkinter as tk\n",
     "\n",
@@ -48,10 +27,10 @@
     "    #         [2, 0, 2, 0, 2, 0, 2, 0]]\n",
     "    \n",
     "    board = [[0, 0, 0, 0, 0, 0, 0, 0],\n",
+    "             [0, 0, 0, 0, 1, 0, 0, 0],\n",
     "             [0, 0, 0, 0, 0, 0, 0, 0],\n",
-    "             [0, 1, 0, 0, 0, 0, 0, 0],\n",
-    "             [0, 0, 2, 0, 0, 0, 0, 0],\n",
-    "             [0, 0, 0, 0, 0, 0, 0, 0],\n",
+    "             [0, 0, 1, 0, 0, 0, 0, 0],\n",
+    "             [0, 2, 0, 0, 0, 0, 0, 0],\n",
     "             [0, 0, 0, 0, 0, 0, 0, 0],\n",
     "             [0, 0, 0, 0, 0, 0, 0, 0],\n",
     "             [0, 0, 0, 0, 0, 0, 0, 0]]\n",
@@ -64,10 +43,11 @@
     "        self.canvas = tk.Canvas(master, width=400, height=400)\n",
     "        self.board = CheckerBoard.board\n",
     "        self.hi_sq = CheckerBoard.hi_sq\n",
-    "        # self.btn = CheckerBoard.btn\n",
-    "        # self.btn2 = CheckerBoard.btn2\n",
     "        self.canvas.pack()\n",
+    "        self.textbox = tk.Label(master, text=\"Hello world\")\n",
+    "        self.textbox.pack()\n",
     "        self.draw_board()\n",
+    "        self.textbox.config(text=\"hello\")\n",
     "        \n",
     "    def draw_board(self):\n",
     "        self.canvas.delete(\"all\")\n",
@@ -102,24 +82,24 @@
     "    # r2,c2 row and column of destination\n",
     "    def check_move(self, r1,c1, r2,c2):\n",
     "        if r1 < 0 or r1 > 7 or c1 < 0 or c1 > 7 or r2 < 0 or r2 > 7 or c2 < 0 or c2 > 7:\n",
-    "            print(\"0\", end = '')\n",
+    "            # print(\"0\", end = '')\n",
     "            return False\n",
     "        # check if the destination square is not empty\n",
     "        if self.board[r2][c2] != 0:\n",
-    "            print(\"1\", end = '')\n",
+    "            # print(\"1\", end = '')\n",
     "            return False\n",
     "        # check if the move is diagonal\n",
     "        if abs(r2 - r1) != abs(c2 - c1):\n",
-    "            print(\"2\", end = '')\n",
+    "            # print(\"2\", end = '')\n",
     "            return False\n",
     "        # check if the move is in the correct direction for the piece\n",
     "        #red\n",
     "        if self.board[r1][c1] == 1 and r2 < r1:\n",
-    "            print(\"3\", end = '')\n",
+    "            # print(\"3\", end = '')\n",
     "            return False\n",
     "        #black\n",
     "        if self.board[r1][c1] == 2 and r2 > r1:\n",
-    "            print(\"4\", end = '')\n",
+    "            # print(\"4\", end = '')\n",
     "            return False\n",
     "        # check if the move is a jump\n",
     "        if abs(r2 - r1) == 2:\n",
@@ -127,38 +107,65 @@
     "            jump_row = (r1 + r2) // 2\n",
     "            jump_col = (c1 + c2) // 2\n",
     "            if self.board[jump_row][jump_col] == 0:\n",
-    "                print(\"5a\", end = '')\n",
+    "                # print(\"5a\", end = '')\n",
     "                return False\n",
     "            # check if the jumped piece is the opposite color\n",
     "            if (self.board[r1][c1] == 1 or self.board[r1][c1] == 3) and (self.board[jump_row][jump_col] == 1 or self.board[jump_row][jump_col] == 3):\n",
-    "                print(\"6a\", end = '')\n",
+    "                # print(\"6a\", end = '')\n",
     "                return False\n",
     "            if (self.board[r1][c1]== 2 or self.board[r1][c1] == 4) and (self.board[jump_row][jump_col] == 2 or self.board[jump_row][jump_col] == 4):\n",
-    "                print(\"7a\", end = '')\n",
+    "                # print(\"7a\", end = '')\n",
     "                return False\n",
     "        # check if the move is only one square\n",
     "        elif abs(r2 - r1) != 1:\n",
-    "            print(\"8\", end = '')\n",
+    "            # print(\"8\", end = '')\n",
     "            return False\n",
     "        return True\n",
     "    \n",
     "    def check_jump(self, r1,c1,r2,c2):\n",
+    "        if r1 < 0 or r1 > 7 or c1 < 0 or c1 > 7 or r2 < 0 or r2 > 7 or c2 < 0 or c2 > 7:\n",
+    "            return False\n",
+    "        \n",
+    "        # check if the destination square is not empty\n",
+    "        if self.board[r2][c2] != 0:\n",
+    "            return False\n",
+    "        # check if the move is in the correct direction for the piece\n",
+    "        #red\n",
+    "        if self.board[r1][c1] == 1 and r2 < r1:\n",
+    "            # print(\"3\", end = '')\n",
+    "            return False\n",
+    "        #black\n",
+    "        if self.board[r1][c1] == 2 and r2 > r1:\n",
+    "            # print(\"4\", end = '')\n",
+    "            return False\n",
     "        # check if the move is a jump\n",
     "        if abs(r2 - r1) == 2:\n",
     "            # check if there is a piece to jump over\n",
     "            jump_row = (r1 + r2) // 2\n",
     "            jump_col = (c1 + c2) // 2\n",
     "            if self.board[jump_row][jump_col] == 0:\n",
-    "                print(\"5b\", end = '')\n",
     "                return False\n",
     "            # check if the jumped piece is the opposite color\n",
     "            if (self.board[r1][c1] == 1 or self.board[r1][c1] == 3) and (self.board[jump_row][jump_col] == 1 or self.board[jump_row][jump_col] == 3):\n",
-    "                print(\"6b\", end = '')\n",
     "                return False\n",
     "            if (self.board[r1][c1]== 2 or self.board[r1][c1] == 4) and (self.board[jump_row][jump_col] == 2 or self.board[jump_row][jump_col] == 4):\n",
-    "                print(\"7b\", end = '')\n",
     "                return False\n",
     "            return True\n",
+    "    \n",
+    "    def pos_jump(self, color):\n",
+    "        for i in range(8):\n",
+    "            for j in range(8):\n",
+    "                if self.check_piece(i, j, color):\n",
+    "                    return self.pos_sing_jump(i, j, color)\n",
+    "        return False\n",
+    "    \n",
+    "    def pos_sing_jump(self, i, j, color):\n",
+    "        #print(i, j)\n",
+    "        if self.check_jump(i, j, i+2, j+2): return True\n",
+    "        if self.check_jump(i, j, i+2, j-2): return True\n",
+    "        if self.check_jump(i, j, i-2, j+2): return True\n",
+    "        if self.check_jump(i, j, i-2, j-2): return True\n",
+    "        return False\n",
     "    \n",
     "    def check_piece(self, row, col, color):\n",
     "        if color == \"black\":      \n",
@@ -217,7 +224,6 @@
     "            return 2\n",
     "        return 0\n",
     "        \n",
-    "    \n",
     "    def win(self, color):\n",
     "        self.canvas.create_rectangle(100,100,300,300, fill=color)\n",
     "        self.canvas.create_rectangle(115,115,285,285, fill=\"white\")\n",
@@ -253,40 +259,69 @@
     "        self.c1 = 0\n",
     "        self.r2 = 0\n",
     "        self.c2 = 0\n",
+    "        self.jump = False\n",
     "        self.turn2 = False\n",
     "        self.win = 0\n",
     "    \n",
     "    def click_handler(self, event):\n",
+    "        #print(\"turn:\", self.turn,\"click2:\", self.turn2) \n",
     "        col = event.x // 50\n",
     "        row = event.y // 50\n",
-    "        \n",
-    "        print(col, row, self.turn2)\n",
+    "        self.move(col, row)\n",
+    "    \n",
+    "    def AI_move(self):\n",
+    "        move_list = []\n",
+    "        for i in range(8):\n",
+    "            for j in range(8):\n",
+    "                if self.board.check_piece( i, j, \"black\"):\n",
+    "                    if self.check_move(i, j, i+1, j+1): b_move_available = True\n",
+    "                    if self.check_move(i, j, i+1, j-1): b_move_available = True\n",
+    "                    if self.check_move(i, j, i-1, j+1): b_move_available = True\n",
+    "                    if self.check_move(i, j, i-1, j-1): b_move_available = True\n",
+    "\n",
+    "                    if self.check_move(i, j, i+2, j+2): b_move_available = True\n",
+    "                    if self.check_move(i, j, i+2, j-2): b_move_available = True\n",
+    "                    if self.check_move(i, j, i-2, j+2): b_move_available = True\n",
+    "                    if self.check_move(i, j, i-2, j-2): b_move_available = True\n",
+    "        return False\n",
+    "    \n",
+    "    def move(self, col, row):\n",
+    "        self.board.textbox.config(text=self.turn+\"'s turn\")\n",
     "        if self.turn2:     #second click\n",
     "            self.c2 = col\n",
     "            self.r2 = row\n",
-    "            if self.board.check_move(self.r1,self.c1,self.r2,self.c2):\n",
-    "                self.board.place_piece(row, col, self.turn)\n",
-    "                \n",
-    "                if self.board.check_jump(self.r1,self.c1,self.r2,self.c2):    #remove jumped piece\n",
-    "                    jump_row = (self.r1 + self.r2) // 2\n",
-    "                    jump_col = (self.c1 + self.c2) // 2\n",
-    "                    self.board.board[jump_row][jump_col] = 0\n",
-    "                if self.turn == \"black\":\n",
-    "                    self.turn = \"red\"\n",
+    "            \n",
+    "            if self.jump:\n",
+    "                if self.board.check_jump(self.r1,self.c1,self.r2,self.c2):\n",
+    "                    self.make_move()\n",
+    "                    if self.board.pos_sing_jump(row, col, self.turn):\n",
+    "                        if self.turn == \"black\":\n",
+    "                            self.turn = \"red\"\n",
+    "                        else:\n",
+    "                            self.turn = \"black\"\n",
+    "                        self.turn2 = True\n",
+    "                        self.r1 = self.r2\n",
+    "                        self.c1 = self.c2\n",
+    "                        self.board.hi_sq[1] = [self.c1, self.r1]\n",
+    "                        self.board.hi_sq[0] = True\n",
+    "                    self.board.textbox.config(text=self.turn+\"'s turn\")\n",
     "                else:\n",
-    "                    self.turn = \"black\"\n",
-    "                self.board.board[self.r2][self.c2] = self.board.board[self.r1][self.c1]\n",
-    "                self.board.board[self.r1][self.c1] = 0\n",
-    "                self.turn2 = False\n",
-    "                self.board.hi_sq[0] = False\n",
-    "                self.board.check_king(self.r2, self.c2)\n",
-    "                \n",
+    "                    self.board.textbox.config(text=\"Must make jump\")\n",
+    "                    self.turn2 = False\n",
+    "                    self.board.hi_sq[0] = False\n",
+    "            elif self.board.check_move(self.r1,self.c1,self.r2,self.c2):\n",
+    "                self.make_move()\n",
+    "                self.board.textbox.config(text=self.turn+\"'s turn\")\n",
     "            else:        #invalid second move\n",
     "                self.turn2 = False\n",
     "                self.board.hi_sq[0] = False\n",
-    "        \n",
-    "        else:            #first move\n",
+    "                self.board.textbox.config(text=self.turn+\"'s turn\")\n",
+    "            \n",
+    "                \n",
+    "        else:            #first click\n",
+    "            \n",
     "            if self.board.check_piece(row, col, self.turn):\n",
+    "                self.jump = self.board.pos_jump(self.turn)\n",
     "                self.c1 = col\n",
     "                self.r1 = row\n",
     "                self.board.hi_sq[0] = True\n",
@@ -295,17 +330,39 @@
     "        self.board.draw_board()\n",
     "        self.win = self.board.win_condition()\n",
     "        if self.win != 0:\n",
-    "            if self.win == 1:\n",
-    "                self.board.win(\"black\")\n",
-    "            elif self.win == 2:  \n",
-    "                self.board.win(\"red\")     \n",
-    "            self.r1 = 0\n",
-    "            self.c1 = 0\n",
-    "            self.r2 = 0\n",
-    "            self.c2 = 0\n",
-    "            self.turn2 = False\n",
-    "            self.win = 0\n",
+    "            self.reset()\n",
+    "    \n",
+    "        \n",
+    "    def make_move(self):\n",
+    "        self.board.place_piece(self.r1, self.c2, self.turn)   \n",
+    "        if self.board.check_jump(self.r1,self.c1,self.r2,self.c2):    #remove jumped piece\n",
+    "            jump_row = (self.r1 + self.r2) // 2\n",
+    "            jump_col = (self.c1 + self.c2) // 2\n",
+    "            self.board.board[jump_row][jump_col] = 0\n",
+    "        if self.turn == \"black\":\n",
     "            self.turn = \"red\"\n",
+    "        else:\n",
+    "            self.turn = \"black\"\n",
+    "        self.board.board[self.r2][self.c2] = self.board.board[self.r1][self.c1]\n",
+    "        self.board.board[self.r1][self.c1] = 0\n",
+    "        self.turn2 = False\n",
+    "        self.jump = False\n",
+    "        self.board.hi_sq[0] = False\n",
+    "        self.board.check_king(self.r2, self.c2)\n",
+    "        \n",
+    "    def reset(self):\n",
+    "        if self.win == 1:\n",
+    "            self.board.win(\"black\")\n",
+    "        elif self.win == 2:  \n",
+    "            self.board.win(\"red\")     \n",
+    "        self.r1 = 0\n",
+    "        self.c1 = 0\n",
+    "        self.r2 = 0\n",
+    "        self.c2 = 0\n",
+    "        self.jump = False\n",
+    "        self.turn2 = False\n",
+    "        self.win = 0\n",
+    "        self.turn = \"red\"\n",
     "\n",
     "root = tk.Tk()\n",
     "game = Game(root)\n",
@@ -315,7 +372,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1cbacd2f-1198-4957-88c1-e6904f1df726",
+   "id": "ac77142b-1efe-4a37-87ea-226fe5c78f56",
    "metadata": {},
    "outputs": [],
    "source": []
