--- a/Checkers-Refactor.ipynb
+++ b/Checkers-Refactor.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 7,
    "id": "7707cfdb-9b71-46a6-a837-396aab4e15e8",
    "metadata": {
     "tags": []
@@ -14,31 +14,7 @@
      "text": [
       "self.jump:  False red\n",
       "ai move\n",
-      "square:  0 1\n",
-      "square:  0 3\n",
-      "square:  0 5\n",
-      "square:  0 7\n",
-      "square:  1 0\n",
-      "square:  1 2\n",
-      "square:  1 4\n",
-      "square:  1 6\n",
-      "square:  2 1\n",
-      "1\n",
-      "self.jump:  False black\n",
-      "move made\n",
-      "self.jump:  False red\n",
-      "ai move\n",
-      "square:  0 1\n",
-      "square:  0 3\n",
-      "square:  0 5\n",
-      "square:  0 7\n",
-      "square:  1 0\n",
-      "1\n",
-      "self.jump:  True black\n",
-      "square:  1 2\n",
-      "2\n",
-      "self.jump:  True black\n",
-      "move made\n"
+      "[((2, 1), (3, 2)), ((2, 1), (3, 0)), ((2, 3), (3, 4)), ((2, 3), (3, 2)), ((2, 5), (3, 6)), ((2, 5), (3, 4)), ((2, 7), (3, 6))]\n"
      ]
     }
    ],
@@ -184,20 +160,41 @@
     "                return False\n",
     "            return True\n",
     "    \n",
+    "    #returns True if current side can make a jump move\n",
     "    def pos_jump(self, color):\n",
     "        for row in range(8):\n",
     "            for col in range(8):\n",
     "                if self.check_piece(row, col, color):\n",
-    "                    if self.pos_sing_jump(row, col): return True\n",
+    "                    return self.pos_sing_jump(row, col)\n",
     "        return False\n",
     "    \n",
+    "    #helper method for pos_jump\n",
     "    def pos_sing_jump(self, row, col):\n",
+    "        #print(i, j)\n",
     "        if self.check_jump(row, col, row+2, col+2): return True\n",
     "        if self.check_jump(row, col, row+2, col-2): return True\n",
     "        if self.check_jump(row, col, row-2, col+2): return True\n",
     "        if self.check_jump(row, col, row-2, col-2): return True\n",
     "        return False\n",
     "    \n",
+    "    #returns a list of tuples of all possible moves for a given color side\n",
+    "    def pos_moves(self, color):\n",
+    "        moves = []\n",
+    "        for row in range(8):\n",
+    "            for col in range(8):\n",
+    "                if self.check_piece(row, col, color):\n",
+    "                    if self.check_move(row, col, row+1, col+1): moves.append( ((row, col),(row+1, col+1)) )\n",
+    "                    if self.check_move(row, col, row+1, col-1): moves.append( ((row, col),(row+1, col-1)) )\n",
+    "                    if self.check_move(row, col, row-1, col+1): moves.append( ((row, col),(row-1, col+1)) )\n",
+    "                    if self.check_move(row, col, row-1, col-1): moves.append( ((row, col),(row-1, col-1)) )\n",
+    "                    \n",
+    "                    if self.check_jump(row, col, row+2, col+2): moves.append( ((row, col),(row+2, col+2)) )\n",
+    "                    if self.check_jump(row, col, row+2, col-2): moves.append( ((row, col),(row+2, col-2)) )\n",
+    "                    if self.check_jump(row, col, row-2, col+2): moves.append( ((row, col),(row-2, col+2)) )\n",
+    "                    if self.check_jump(row, col, row-2, col-2): moves.append( ((row, col),(row-2, col-2)) )\n",
+    "        return moves\n",
+    "    \n",
+    "    # checks if piece is the right team piece\n",
     "    def check_piece(self, row, col, color):\n",
     "        if color == \"black\":      \n",
     "            if self.board[row][col] == 1:\n",
@@ -211,6 +208,7 @@
     "                return True\n",
     "        return False\n",
     "    \n",
+    "    #checks if a kind should be made\n",
     "    def check_king(self, row, col):\n",
     "        if row == 7:\n",
     "            if self.board[row][col] == 1:\n",
@@ -300,66 +298,13 @@
     "        row = event.y // 50\n",
     "        self.move(row, col)\n",
     "    \n",
+    "    #min-max algorithm\n",
     "    def AI_move(self):\n",
     "        print(\"ai move\")\n",
-    "        move_list = []\n",
+    "        move_list = self.board.pos_moves(self.turn)\n",
     "        move_made = False\n",
-    "        for row in range(8):\n",
-    "            for col in range(8):\n",
-    "                if self.board.check_piece( row, col, \"black\"):\n",
-    "                    print('square: ',row,col)\n",
-    "                    if self.board.check_move(row, col, row+1, col+1):\n",
-    "                        print(\"1\")\n",
-    "                        move_made = self.move(row, col)\n",
-    "                        move_made = self.move(row+1, col+1)\n",
-    "                        if move_made: break\n",
-    "                    if self.board.check_move(row, col, row+1, col-1):\n",
-    "                        print(\"2\")\n",
-    "                        move_made = self.move(row, col)\n",
-    "                        move_made = self.move(row+1, col-1)\n",
-    "                        move_made = True\n",
-    "                        break\n",
-    "                    if self.board.check_move(row, col, row-1, col+1): \n",
-    "                        print(\"3\")\n",
-    "                        self.move(row, col)\n",
-    "                        self.move(row-1, col+1)\n",
-    "                        move_made = True\n",
-    "                        break\n",
-    "                    if self.board.check_move(row, col, row-1, col-1): \n",
-    "                        print(\"4\")\n",
-    "                        self.move(row, col)\n",
-    "                        self.move(row-1,col-1)\n",
-    "                        move_made = True\n",
-    "                        break\n",
-    "                    if self.board.check_move(row, col, row+2, col+2): \n",
-    "                        print(\"5\")\n",
-    "                        self.move(row, col)\n",
-    "                        self.move(row+2, col+2)\n",
-    "                        move_made = True\n",
-    "                        break\n",
-    "                    if self.board.check_move(row, col, row+2, col-2): \n",
-    "                        print(\"6\")\n",
-    "                        self.move(row, col)\n",
-    "                        self.move(row+2, col-2)\n",
-    "                        move_made = True\n",
-    "                        break\n",
-    "                    if self.board.check_move(row, col, row-2, col+2): \n",
-    "                        print(\"7\")\n",
-    "                        self.move(row, col)\n",
-    "                        self.move(row-2, col+2)\n",
-    "                        move_made = True\n",
-    "                        break\n",
-    "                    if self.board.check_move(row, col, row-2, col-2): \n",
-    "                        print(\"8\")\n",
-    "                        self.move(row, col)\n",
-    "                        self.move(row-2, col-2)\n",
-    "                        move_made = True\n",
-    "                        break\n",
-    "            \n",
-    "            if move_made:\n",
-    "                print('move made')\n",
-    "                break\n",
-    "        return False\n",
+    "        print(move_list)\n",
+    "        \n",
     "    \n",
     "    def move(self, row, col):\n",
     "        self.board.textbox.config(text=self.turn+\"'s turn\")\n",
@@ -367,7 +312,6 @@
     "        if self.turn2:     #second click\n",
     "            self.r2 = row\n",
     "            self.c2 = col\n",
-    "            \n",
     "            if self.jump:\n",
     "                if self.board.check_jump(self.r1,self.c1,self.r2,self.c2):\n",
     "                    self.make_move()\n",
@@ -454,7 +398,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f26d8c20-7bb0-481e-9849-3b7bce3ba731",
+   "id": "1ffcbaa8-9eb0-48d0-b932-445dc3dd6c23",
    "metadata": {},
    "outputs": [],
    "source": []
