--- a/Checkers.ipynb
+++ b/Checkers.ipynb
@@ -591,53 +591,60 @@
     "        print(\"ai move\")\n",
     "        move_list = []\n",
     "        move_made = False\n",
-    "        for i in range(8):\n",
-    "            for j in range(8):\n",
-    "                if self.board.check_piece( i, j, \"black\"):\n",
-    "                    print(i,j)\n",
-    "                    if self.board.check_move(i, j, i+1, j+1):\n",
+    "        for row in range(8):\n",
+    "            for col in range(8):\n",
+    "                if self.board.check_piece( row, col, \"black\"):\n",
+    "                    print('square: ',row,col)\n",
+    "                    if self.board.check_move(row, col, row+1, col+1):\n",
     "                        print(\"1\")\n",
-    "                        self.move(j, i)\n",
-    "                        self.move(j+1, i+1)\n",
-    "                        break\n",
-    "                    if self.board.check_move(i, j, i+1, j-1):\n",
+    "                        move_made = self.move(row, col)\n",
+    "                        move_made = self.move(row+1, col+1)\n",
+    "                        if move_made: break\n",
+    "                    if self.board.check_move(row, col, row+1, col-1):\n",
     "                        print(\"2\")\n",
-    "                        self.move(j, i)\n",
-    "                        self.move(j+1, i-1)\n",
+    "                        move_made = self.move(row, col)\n",
+    "                        move_made = self.move(row+1, col-1)\n",
+    "                        move_made = True\n",
     "                        break\n",
-    "                    if self.board.check_move(i, j, i-1, j+1): \n",
+    "                    if self.board.check_move(row, col, row-1, col+1): \n",
     "                        print(\"3\")\n",
-    "                        self.move(j, i)\n",
-    "                        self.move(j-1, i+1)\n",
+    "                        self.move(row, col)\n",
+    "                        self.move(row-1, col+1)\n",
+    "                        move_made = True\n",
     "                        break\n",
-    "                    if self.board.check_move(i, j, i-1, j-1): \n",
+    "                    if self.board.check_move(row, col, row-1, col-1): \n",
     "                        print(\"4\")\n",
-    "                        self.move(j, i)\n",
-    "                        self.move(j-1, i-1)\n",
+    "                        self.move(row, col)\n",
+    "                        self.move(row-1,col-1)\n",
+    "                        move_made = True\n",
     "                        break\n",
-    "\n",
-    "                    if self.board.check_move(i, j, i+2, j+2): \n",
+    "                    if self.board.check_move(row, col, row+2, col+2): \n",
     "                        print(\"5\")\n",
-    "                        self.move(j, i)\n",
-    "                        self.move(j+2, i+2)\n",
+    "                        self.move(row, col)\n",
+    "                        self.move(row+2, col+2)\n",
+    "                        move_made = True\n",
     "                        break\n",
-    "                    if self.board.check_move(i, j, i+2, j-2): \n",
+    "                    if self.board.check_move(row, col, row+2, col-2): \n",
     "                        print(\"6\")\n",
-    "                        self.move(j, i)\n",
-    "                        self.move(j+2, i-2)\n",
+    "                        self.move(row, col)\n",
+    "                        self.move(row+2, col-2)\n",
+    "                        move_made = True\n",
     "                        break\n",
-    "                    if self.board.check_move(i, j, i-2, j+2): \n",
+    "                    if self.board.check_move(row, col, row-2, col+2): \n",
     "                        print(\"7\")\n",
-    "                        self.move(j, i)\n",
-    "                        self.move(j-2, i+2)\n",
+    "                        self.move(row, col)\n",
+    "                        self.move(row-2, col+2)\n",
+    "                        move_made = True\n",
     "                        break\n",
-    "                    if self.board.check_move(i, j, i-2, j-2): \n",
+    "                    if self.board.check_move(row, col, row-2, col-2): \n",
     "                        print(\"8\")\n",
-    "                        self.move(j, i)\n",
-    "                        self.move(j-2, i-2)\n",
+    "                        self.move(row, col)\n",
+    "                        self.move(row-2, col-2)\n",
+    "                        move_made = True\n",
     "                        break\n",
     "            \n",
     "            if move_made:\n",
+    "                print('move made')\n",
     "                break\n",
     "        return False\n",
     "    \n",
