working on minimax

--- a/Checkers-Refactor.ipynb
+++ b/Checkers-Refactor.ipynb
@@ -2,25 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "7707cfdb-9b71-46a6-a837-396aab4e15e8",
+   "execution_count": 1,
+   "id": "4fc2ddc3-06e1-4a2a-9b8c-b95605fc2e8a",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "self.jump:  False red\n",
-      "ai move\n",
-      "[((2, 1), (3, 2)), ((2, 1), (3, 0)), ((2, 3), (3, 4)), ((2, 3), (3, 2)), ((2, 5), (3, 6)), ((2, 5), (3, 4)), ((2, 7), (3, 6))]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import tkinter as tk\n",
-    "\n",
+    "import tkinter as tk"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "7fd923e6-1c21-488d-aea3-e8bc78e9269e",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
     "class CheckerBoard:\n",
     "    #0 - empty\n",
     "    #1 - black\n",
@@ -274,9 +274,63 @@
     "                      [2, 0, 2, 0, 2, 0, 2, 0]]\n",
     "        self.draw_board()\n",
     "        btn.place_forget()\n",
-    "        btn2.place_forget()\n",
-    "    \n",
+    "        btn2.place_forget() "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1ffcbaa8-9eb0-48d0-b932-445dc3dd6c23",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "class MinMax:\n",
+    "    depth = 1;\n",
+    "    def __init__(self, master):\n",
+    "        self.master = master\n",
     "        \n",
+    "    #all moves is a list of tuple pairs, ie: ( ((0,1),(1,0)) , ((0,1),(2,0)))\n",
+    "    def minmax(self, all_moves):\n",
+    "        optimal_move = (0,0)\n",
+    "        for move in all_moves:\n",
+    "            evaluate(move)\n",
+    "        return optimal_move\n",
+    "    \n",
+    "    #move is a tuple of tuples: ((0,1),(1,0))\n",
+    "    def evaluate(self, move):\n",
+    "        return 0\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "70877000-e869-4a9c-88bf-bc821ed19614",
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "self.jump:  False red\n",
+      "ai move\n",
+      "[((2, 1), (3, 2)), ((2, 1), (3, 0)), ((2, 3), (3, 4)), ((2, 3), (3, 2)), ((2, 5), (3, 6)), ((2, 5), (3, 4)), ((2, 7), (3, 6))]\n",
+      "self.jump:  False black\n",
+      "self.jump:  False red\n",
+      "ai move\n",
+      "[((1, 0), (2, 1)), ((1, 2), (2, 1)), ((2, 3), (4, 5)), ((2, 5), (3, 6)), ((2, 5), (4, 3)), ((2, 7), (3, 6)), ((3, 2), (4, 3)), ((3, 2), (4, 1))]\n"
+     ]
+    }
+   ],
+   "source": [
     "#x,y : col,row\n",
     "class Game:\n",
     "    def __init__(self, master):\n",
@@ -394,14 +448,6 @@
     "game = Game(root)\n",
     "root.mainloop()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1ffcbaa8-9eb0-48d0-b932-445dc3dd6c23",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
