--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,7 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
+   "id": "9ed940e3-40ee-4287-a20c-d0bb96b426ef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fun():\n",
+    "    return 4\n",
+    "\n",
+    "class Run:\n",
+    "    def mathisfun():\n",
+    "        print(Test.addition(2,1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "id": "c06816e6-2fd0-418d-8aa6-5c57ab2eff70",
    "metadata": {},
    "outputs": [
@@ -10,14 +25,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3\n"
+      "10\n"
      ]
     }
    ],
    "source": [
     "class Test:\n",
+    "    z = 3\n",
     "    def addition(x, y):\n",
-    "        return x+y\n",
+    "        return x+y+Test.z + fun()\n",
     "\n",
     "def main():\n",
     "    Run.mathisfun()\n",
@@ -28,20 +44,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "9ed940e3-40ee-4287-a20c-d0bb96b426ef",
+   "execution_count": 17,
+   "id": "4e98ee28-20e6-4e1a-9eec-3f3a0114f877",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n"
+     ]
+    }
+   ],
    "source": [
-    "class Run:\n",
-    "    def mathisfun():\n",
-    "        print(Test.addition(2,1))"
+    "def asdf(x, z, y=2):\n",
+    "    print(x+y+z)\n",
+    "    \n",
+    "asdf(1, y=3, z=4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "8c155607-ccc8-420d-acc9-0987541086a5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 0\n",
+    "x=x+1\n",
+    "print( x )"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4e98ee28-20e6-4e1a-9eec-3f3a0114f877",
+   "id": "fea771c8-3048-424b-83d6-c415b8cc1dab",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -63,7 +108,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.7.13"
   }
  },
  "nbformat": 4,
