--- a/Testing.ipynb
+++ b/Testing.ipynb
@@ -85,8 +85,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "fea771c8-3048-424b-83d6-c415b8cc1dab",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0, 1, 0, 1, 0, 1, 0, 1], [1, 0, 1, 0, 1, 0, 1, 0], [0, 1, 0, 1, 0, 1, 0, 1], [0, 0, 0, 0, 0, 0, 0, 0], [0, 0, 0, 0, 0, 0, 0, 0], [2, 0, 2, 0, 2, 0, 2, 0], [0, 2, 0, 2, 0, 2, 0, 2], [2, 0, 2, 0, 2, 0, 2, 0]]\n",
+      "[[0, 1, 0, 1, 0, 1, 0, 1], [1, 0, 1, 0, 1, 0, 1, 0], [0, 1, 0, 1, 0, 1, 0, 1], [0, 0, 0, 0, 0, 0, 0, 0], [0, 0, 0, 0, 0, 0, 0, 0], [2, 0, 2, 0, 2, 0, 2, 0], [0, 2, 0, 2, 0, 2, 0, 2], [2, 0, 2, 0, 2, 0, 2, 0]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def_board = [[0, 1, 0, 1, 0, 1, 0, 1],\n",
+    "        [1, 0, 1, 0, 1, 0, 1, 0],\n",
+    "        [0, 1, 0, 1, 0, 1, 0, 1],\n",
+    "        [0, 0, 0, 0, 0, 0, 0, 0],\n",
+    "        [0, 0, 0, 0, 0, 0, 0, 0],\n",
+    "        [2, 0, 2, 0, 2, 0, 2, 0],\n",
+    "        [0, 2, 0, 2, 0, 2, 0, 2],\n",
+    "        [2, 0, 2, 0, 2, 0, 2, 0]]\n",
+    "\n",
+    "new_board = def_board.copy()\n",
+    "\n",
+    "print(def_board)\n",
+    "print(new_board)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d7ee9829-bb58-47d5-99d7-c252ccc13818",
    "metadata": {},
    "outputs": [],
    "source": []
